# XImage

./: .gitignore  CMakeLists.txt  README.md  master.pro
FXImage/: CMakeLists.txt
FXImage2.1.0/: CMakeLists.txt  LICENSE
FXImage2.1.0/HubxSDK/include/: XAdaptor.h  XControl.h  XDetector.h  ixcmd_sink.h  iximg_sink.h  xfactory.h
FXImage2.1.0/HubxSDK/src/core/: XAdaptor.cpp  XControl.cpp  xfactory.cpp
FXImage2.1.0/HubxSDK/src/xlibdll_wrapper/: xlibdll_interface.h  xlibdll_proxy.cpp
FXImage2.1.0/dependencies/qt/: README.md
FXImage2.1.0/installer/windows/: setup.iss
HubxSDK/: CMakeLists.txt
HubxSDK/include/: XAdaptor.h  XControl.h  XDetector.h  XFile.h  XFrame.h  XGrabber.h  XImage.h  XShow.h  ixcmd_sink.h  iximg_sink.h  xfactory.h
HubxSDK/src/core/: XAdaptor.cpp  XControl.cpp  XDetector.cpp  XFile.cpp  XFrame.cpp  XGrabber.cpp  XImage.cpp  XShow.cpp  xfactory.cpp
HubxSDK/src/correction/: background_correction.cpp  baseline_correction.cpp  dual_energy_fusion.cpp  gain_correction.cpp  pdc_correction.cpp  xmg_correct.cpp  xmog_correct.cpp  xog_correct.cpp
HubxSDK/src/xlibdll_wrapper/: xlibdll_interface.h  xlibdll_proxy.cpp
dependencies/xlibdll/: README.md
docs/design/: algorithm_design.md  api_design.md  architecture_design.md
installer/linux/: install_script.sh
scripts/: build_all.sh  deploy_linux.sh  deploy_windows.bat  test_runner.py
